--- a/index.html
+++ b/index.html
@@ -20,75 +20,41 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>My first Slider</title>
   <body>
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-      <script src="./js/script.js"></script>
-    <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class = "mdl-layout__header">
-        <div class = "mdl-layout__header-row">
-          <span class = "mdl-layout-title">Pyramid Calculator</span> 
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">My first PWA</span>
         </div>
       </header>
-      <main class = "mdl-layout__content">
-          <table>
-            <tr>
-              <th>
-                <img src="./images/pyramid.png" alt="pyramid" width="75%" height="auto" />
-              </th>
-              <th>
-                <h2>Formulas</h2>
-                <h3>V = ( l x w x h ) / 3 </h3>
-              </th>
-            </tr>
-          </table>
-          <!-- Numeric Textfield -->
-          <form action="#">
-            <p>Length</p>
-            <div class="mdl-textfield mdl-js-textfield">
-              <input
-                class="mdl-textfield__input"
-                type="number"
-                step=".01"
-                id="length-of-pyramid"/>
-              <label class="mdl-textfield__label" for="length-of-pyramid">Enter length ...</label>
-              <span class="mdl-textfield__error">Input is not a number!</span>
-            </div>
-            <!-- Numeric Textfield -->
-            <form action="#">
-              <p>Width</p>
-              <div class="mdl-textfield mdl-js-textfield">
-                <input
-                  class="mdl-textfield__input"
-                  type="number"
-                  step=".01"
-                  id="width-of-pyramid"/>
-                <label class="mdl-textfield__label" for="width-of-pyramid">Enter width ...</label>
-                <span class="mdl-textfield__error">Input is not a number!</span>
-              </div>
-            </form>
-            <!-- Numeric Textfield -->
-            <form action="#">
-              <p>Height</p>
-              <div class="mdl-textfield mdl-js-textfield">
-                <input
-                  class="mdl-textfield__input"
-                  type="number"
-                  step=".01"
-                  id="height-of-pyramid"/>
-                <label class="mdl-textfield__label" for="height-of-pyramid">Enter height ...</label>
-                <span class="mdl-textfield__error">Input is not a number!</span>
-              </div>
-            </form>
-            <!-- Raised button with ripple -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="calculate()">
-              Calculate
-            </button>
-            <br />
-            <br>
-            <div id="answers"></div>
-          </form>
-        </main>
+      <main class="mdl-layout__content">
+        <p></p>
+        <img src="./images/notebook-animation.svg" alt="Computer" width="25%" height="25%">
+        <p></p>
+        <div id="slider-value">
+          ?
+        </div>  
+        <!-- Slider with Starting Value -->
+        <label>
+          Slider's Value
+          <input id = "slider" class="mdl-slider mdl-js-slider" type="range"
+          min="1" max="6" value="2" tabindex="0"
+          onchange = "updateSliderValue(this.value)">
+        </label>
+        <!-- Raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="myButtonClicked()"
+        >
+          Show Value
+        </button>
+        <!-- basic text -->
+        <p></p>
+        <div id="random-number"></div>
+      </main>
     </div>
   </body>
 </html>
