--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first PWA" />
+    <meta name="description" content="Guessing Game" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Johanna Liu" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>GitHub page as PWA template</title>
     <link rel="canonical" href="https://mr-coxall.github.io/ICS2O-PWA-Test/" />
     <link rel="manifest" href="/ICS2O-Unit-5-01/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -20,14 +19,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first Slider</title>
+  <title>Guessing Game</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
+          <span class="mdl-layout-title">Guessing Game</span>
         </div>
       </header>
       <main class="mdl-layout__content">
